fix clipping content

--- a/src/assets/_city.scss
+++ b/src/assets/_city.scss
@@ -61,7 +61,7 @@
 .hourly-weather-list {
   display: flex;
   padding: 15px;
-  justify-content: center;
+  justify-content: space-between;
   gap: 15px;
 }
 
